Fixing Blockchain Scrollbar

--- a/static/css/style_verification.css
+++ b/static/css/style_verification.css
@@ -238,7 +238,6 @@ hr.nova-logo {
   display: flex;
   flex-wrap: nowrap;
   overflow-x: auto;
-  direction: rtl;
   -webkit-overflow-scrolling: touch;
 }
 
