--- a/static/css/style_verify.css
+++ b/static/css/style_verify.css
@@ -196,7 +196,6 @@ hr {
   display: flex;
   flex-wrap: nowrap;
   overflow-x: auto;
-  direction: rtl;
   -webkit-overflow-scrolling: touch;
 }
 
